--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "curso-avanzado-graphql-server",
+  "name": "icigram-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,18 +11,18 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "apollo-server-express": "2.5.0",
-    "bcrypt": "3.0.6",
-    "cors": "2.8.5",
-    "express": "4.17.0",
-    "express-jwt": "5.3.1",
-    "graphql": "14.3.0",
-    "jsonwebtoken": "8.5.1",
-    "lowdb": "1.0.0",
-    "uuid": "3.3.2"
-  },
   "devDependencies": {
-    "nodemon": "1.19.0"
+    "nodemon": "^2.0.16"
+  },
+  "dependencies": {
+    "apollo-server-express": "^3.7.0",
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "express-jwt": "^7.7.1",
+    "graphql": "^16.5.0",
+    "jsonwebtoken": "^8.5.1",
+    "lowdb": "^3.0.0",
+    "uuid": "^8.3.2"
   }
 }
