--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,7 @@
     "dev:api": "nodemon index.js --ignore db.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Bryan Navarrete",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.16"
